--- a/templates/groupe_prive/show.html.twig
+++ b/templates/groupe_prive/show.html.twig
@@ -39,24 +39,22 @@
             <div class="col-md-8 text-center">
                 <a class="btn btn-success ms-2" href="{{ path('app_groupe_prive_index') }}">Mes Groupes</a>
                 <a class="btn btn-success ms-2" href="{{ path('app_groupe_prive_edit', {'id': groupe_prive.id}) }}">Modifier</a>
-                <a class="btn btn-success ms-2" href="{{ path('app_groupe_prive_addParticipants', {'id': groupe_prive.id}) }}">Ajouter des Participants</a>
-                <a class="btn btn-danger ms-2" href="{{ path('app_groupe_prive_deleteParticipants', {'id': groupe_prive.id}) }}">Supprimer des Participants</a>
-                <form method="post" action="{{ path('app_groupe_prive_delete', {'id': groupe_prive.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce groupe ?');" style="display: inline;">
+                <a class="btn btn-success ms-2"
+                   href="{{ path('app_groupe_prive_addParticipants', {'id': groupe_prive.id}) }}">Ajouter des
+                    Participants</a>
+                {% if lesInscrits|length > 0 %}
+                    <a class="btn btn-danger ms-2"
+                       href="{{ path('app_groupe_prive_deleteParticipants', {'id': groupe_prive.id}) }}">Supprimer des
+                        Participants</a>
+                {% endif %}
+                <form method="post" action="{{ path('app_groupe_prive_delete', {'id': groupe_prive.id}) }}"
+                      onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce groupe ?');"
+                      style="display: inline;">
                     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ groupe_prive.id) }}">
                     <button class="btn btn-danger ms-2">Supprimer</button>
                 </form>
             </div>
         </div>
     </div>
-
-
-    <a class="btn btn-success ms-2" href="{{ path('app_groupe_prive_edit', {'id': groupe_prive.id}) }}">Modifier</a>
-    <a class="btn btn-success ms-2" href="{{ path('app_groupe_prive_addParticipants', {'id': groupe_prive.id}) }}">Ajouter des Participants</a>
-
-    {% if lesInscrits|length > 0 %}
-        <a class="btn btn-danger ms-2" href="{{ path('app_groupe_prive_deleteParticipants', {'id': groupe_prive.id}) }}">Supprimer des Participants</a>
-    {% endif %}
-
-
-    {{ include('groupe_prive/_delete_form.html.twig') }}
+    
 {% endblock %}
