--- a/templates/ajouter_villes/show.html.twig
+++ b/templates/ajouter_villes/show.html.twig
@@ -26,6 +26,8 @@
 
     <div class="d-flex justify-content-center">
         <a class="btn btn-primary ms-2" href="{{ path('app_ajouter_villes_index') }}">Liste des villes</a>
+        {% if is_granted('ROLE_ADMIN') %}
         <a class="btn btn-primary ms-2" href="{{ path('app_ajouter_villes_edit', {'id': ville.id}) }}">Modifier</a>
+        {% endif %}
     </div>
 {% endblock %}
