--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -69,7 +69,7 @@
         <div class="d-flex justify-content-center">
             <a href="{{ path('app_sorties_new') }}" class="btn btn-outline-primary ms-2">Créer une nouvelle sortie</a>
             <a href="{{ path('app_ajouter_villes_new') }}" class="btn btn-outline-primary ms-2">Ajouter une ville</a>
-            <a href="{{ path('app_groupe_prive_new') }}" class="btn btn-outline-primary ms-2">Créer un nouveau groupe</a>
+            <a href="{{ path('app_lieux_new') }}" class="btn btn-outline-primary ms-2">Ajouter un lieu</a>
         </div>
     </div>
 {% endblock %}
