--- a/templates/lieux/new.html.twig
+++ b/templates/lieux/new.html.twig
@@ -16,8 +16,8 @@
                 {{ form_row(form.rue) }}
                 {{ form_row(form.noVille) }}
                 <div class="d-flex justify-content-center">
-                    <button class="btn btn-primary ms-2" href="{{ path('app_lieux_new') }}">Créer</button>
-                    <a class="btn btn-primary ms-2" href="{{ path('app_lieux_index') }}">Retour à la liste</a>
+                    <button class="btn btn-outline-primary ms-2" href="{{ path('app_lieux_new') }}">Créer</button>
+                    <a class="btn btn-outline-primary ms-2" href="{{ path('app_lieux_index') }}">Liste des lieux existants</a>
                 </div>
                 {{ form_end(form) }}
             </div>
