--- a/templates/ajouter_villes/edit.html.twig
+++ b/templates/ajouter_villes/edit.html.twig
@@ -12,7 +12,8 @@
                 {{ form_row(form.nomVille) }}
                 {{ form_row(form.codePostal) }}
                 <div class="d-flex justify-content-center">
-                    <a class="btn btn-primary ms-2" href="{{ path('app_ajouter_villes_index') }}">Liste des villes</a>
+                    {{ include('ajouter_villes/_form.html.twig', {'button_label': 'Modifier'}) }}
+                    <a class="btn btn-outline-primary ms-2" href="{{ path('app_ajouter_villes_index') }}">Liste des villes</a>
                     {{ form_end(form) }}
                     {{ include('ajouter_villes/_delete_form.html.twig') }}
                 </div>
