--- a/templates/lieux/edit.html.twig
+++ b/templates/lieux/edit.html.twig
@@ -17,9 +17,13 @@
                 {{ form_row(form.rue) }}
                 {{ form_row(form.noVille) }}
                 <div class="d-flex justify-content-center">
+                    {% if is_granted('ROLE_ADMIN') %}
+                        {{ include('lieux/_form.html.twig', {'button_label': 'Modifier'}) }}
+                        {{ include('lieux/_delete_form.html.twig') }}
+                    {% endif %}
                     <a class="btn btn-primary ms-2" href="{{ path('app_lieux_index') }}">Liste des lieux</a>
                     {{ form_end(form) }}
-                    {{ include('lieux/_delete_form.html.twig') }}
+
                 </div>
             </div>
         </div>
