Nouvelle routes pour afficher les sorties

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -65,6 +65,9 @@
                             <a class="nav-link" href="{{ path('app_groupe_prive_index') }}">Mes Groupes</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_sorties_mes_sorties') }}">Mes Sorties</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
                         </li>
                     {% endif %}
